# HogSVM-digit-classification

./: CMakeLists.txt  HogSVM.py  main.cpp
